fixed form spacing issues and started fixing alignment errors, form styling, nav links

--- a/css/main.css
+++ b/css/main.css
@@ -2,30 +2,32 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
-p{
+p {
   font-weight: 300;
-  color: #333333;
+  color: #333;
 }
 
 h1 {
   text-transform: uppercase;
   font-weight: 300;
   color: #59bf8e;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
 }
 
 hr {
   color: #59bf8e;
+  margin-bottom: 0;
 }
 
-a, .btn, .btn-ghost{
+a, .btn, .btn-ghost {
   text-decoration: none;
-  color: #333333;
+  color: #333;
   border: 0;
   background-color: white;
+  padding: 0;
 }
 
-a:hover, .btn:hover, .btn-ghost:hover{
+a:hover, .btn:hover, .btn-ghost:hover {
   text-decoration: none;
   color: #59bf8e;
   border: 0;
@@ -37,37 +39,56 @@ a:hover, .btn:hover, .btn-ghost:hover{
 }
 
 .footer, .push-foot {
-    height: 3em;
+  height: 3em;
 }
 
 fieldset {
   border: none;
 }
 
+#name, #lastname, #email, #text1 {
+  width: 100%;
+  font-weight: 300;
+}
+
+textarea {
+  border-width: 1px;
+  border-color: rgb(200,200,200);
+}
+
+.submit {
+  border-radius: 0;
+  border-bottom: 2px solid #59bf8e;
+}
+
 @media only screen and (min-width: 25em) {
+
   h1 {
-    font-size: 2.6rem;
-    line-height: 1.38114734;
+    font-size: 1.8rem;
+    margin-bottom: 0;
   }
 }
 
 @media only screen and (min-width: 38em) {
+
   h1 {
-    font-size: 3.6rem;
-    line-height: 1.38114734;
+    font-size: 2.8rem;
+    line-height: 1.3811;
   }
 }
 
 @media only screen and (min-width: 60em) {
+
   h1 {
-    font-size: 4.31rem;
-    line-height: 1.38114734;
+    font-size: 3.6rem;
+    line-height: 1.3811;
   }
 }
 
 @media only screen and (min-width: 80em) {
+
   h1 {
-    font-size: 5.1rem;
-    line-height: 1.38114734;
+    font-size: 4.1rem;
+    line-height: 1.3811;
   }
 }
